--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div class="projects__swiper swiper">
             <div class="swiper-wrapper">
               <article class="projects__card swiper-slide">
-                <!-- <div class="blob"></div> -->
+                <div class="blob"></div>
 
                 <div class="projects__image">
                   <img
